# Antigravity

./: .gitignore  FUSION_GATE_V4_ARCHITECTURE.md  README.md  pyproject.toml
.claude/: launch.json  settings.json
.claude/hooks/: bash-guard.sh  diff-guard.sh  post-write-lint.sh  prompt-guard.sh  quality-gate.sh  session-init.sh
antigravity/: cli.py  cortex.py  eidolon.py  gate_engine.py  stellar_kernel.py
antigravity/commander/: filesystem.py  process.py  terminal.py
antigravity/keyboard/: doppelganger.py  ghost_hand.py  quartz_listener.py
antigravity/wrappers/: claude.py  codex.py  gemini.py
tests/: test_gate_engine.py  test_phase2_3.py  test_stellar.py
